# Google_ads_agent

./: .env.example  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/agent-memory/frontend-stylist/: MEMORY.md  STYLE.md
.claude/agents/: README.md  business-strategist.md  code-cleaner-refactorer.md  frontend-stylist.md  marketing-creative.md  ml-systems-engineer.md  production-coder.md  quant-trader-coder.md
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
docs/: GOOGLE_ADS_SETUP.md  IMPLEMENTATION.md  PORTFOLIO.md  SETUP.md  bugs.md
infra/supabase/: schema_all.sql
infra/supabase/migrations/: 0001_core_schema.sql  0002_seed_agency.sql  0003_campaign_launch.sql  0004_client_render_prefs.sql  (+2 more)
services/ai/: pyproject.toml
services/ai/fixtures/med_spa/: ads.json
services/ai/src/gaa_ai/: __init__.py  api.py  cli.py  config.py  templates.py
services/ai/src/gaa_ai/generation/: __init__.py  brief.py  critique.py  generate.py  run.py
services/ai/src/gaa_ai/llm/: __init__.py  base.py  factory.py  gemini.py
services/ai/src/gaa_ai/pipeline/: __init__.py  aggregate.py  enrich.py  relevance.py  run.py
services/ai/src/gaa_ai/schemas/: __init__.py  analysis.py  client.py  common.py  enriched_ad.py  generation.py  render_spec.py
services/ai/src/gaa_ai/scrape/: __init__.py  base.py  cached.py  live.py
services/ai/tests/: test_aggregate.py  test_brief.py  test_critique.py  test_enrich.py  test_generate.py  test_generation_run.py  test_live.py  test_pipeline.py  test_relevance.py
(+107 files in other folders)
