[project]
name = "gaa-ai"
version = "0.1.0"
description = "AI analysis + generation service for the Google Ads Agent (Module 2+)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langchain>=0.2.11",
    "langchain-google-genai>=1.0.7",
    "langgraph>=0.1.16",
    "pytrends>=4.9.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.5",
    "mypy>=1.11",
]

[project.scripts]
gaa-analyze = "gaa_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gaa_ai"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["gaa_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
